--- a/index.html
+++ b/index.html
@@ -399,24 +399,20 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="coldSandwichesTitle">🌭 Soğuk Sandviçler</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/kofte.jpg"><span id="item24">Köfte</span></div>
-      <div class="price">100 TL</div>
+      <div class="left"><img src="img/klasiksandvich.jpg"><span id="item24"><span id="item24name">Klasik Sandviç</span><br><small id="item24desc">(Domates, Beyaz peynir, Kaşar, Marul, Salam)</small></span></div>
+      <div class="price">170 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/doner.jpg"><span id="item25">Döner</span></div>
-      <div class="price">120 TL</div>
+      <div class="left"><img src="img/krempeynir.jpg"><span id="item25"><span id="item25name">Krem Peynirli Sandviç</span><br><small id="item25desc">(Domates, Krem peynir, Kaşar, Zeytin, Marul, Salam)</small></span></div>
+      <div class="price">190 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/kebap.jpg"><span id="item26">Kebap</span></div>
-      <div class="price">140 TL</div>
+      <div class="left"><img src="img/tonbalik.jpg"><span id="item26"><span id="item26name">Ton Balıklı Sandviç</span><br><small id="item26desc">(Ton balığı, Beyaz peynir, Zeytin, Mısır, Marul, Salatalık turşusu)</small></span></div>
+      <div class="price">220 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/pilav.jpg"><span id="item27">Pilav</span></div>
-      <div class="price">70 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/corba.jpg"><span id="item28">Çorba</span></div>
-      <div class="price">50 TL</div>
+      <div class="left"><img src="img/hellim.jpg"><span id="item27"><span id="item27name">Hellim Peynirli Sandviç</span><br><small id="item27desc">(Kızarmış hellim, Domates, Zeytin, Marul, Salam)</small></span></div>
+      <div class="price">220 TL</div>
     </div>
   </div>
 </div>
@@ -425,24 +421,16 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="burgersTitle">🍔 Burgerler</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/kofte.jpg"><span id="item29">Köfte</span></div>
-      <div class="price">100 TL</div>
+      <div class="left"><img src="img/klasikburger.jpg"><span id="item29"><span id="item29name">Klasik Burger</span><br><small id="item29desc">(120gr köfte, Domates, Marul, Turşu) [Çedar +20₺]</small></span></div>
+      <div class="price">230 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/doner.jpg"><span id="item30">Döner</span></div>
-      <div class="price">120 TL</div>
+      <div class="left"><img src="img/tavukburger.jpg"><span id="item30"><span id="item30name">Tavuk Burger</span><br><small id="item30desc">(Şinitzel, Marul, Domates, Turşu) [Çedar +20₺]</small></span></div>
+      <div class="price">210 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/kebap.jpg"><span id="item31">Kebap</span></div>
-      <div class="price">140 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/pilav.jpg"><span id="item32">Pilav</span></div>
-      <div class="price">70 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/corba.jpg"><span id="item33">Çorba</span></div>
-      <div class="price">50 TL</div>
+      <div class="left"><img src="img/pilav.jpg"><span id="item32"><span id="item32name">Limon Burger</span><br><small id="item32desc">(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]</small></span></div>
+      <div class="price">260 TL</div>
     </div>
   </div>
 </div>
@@ -476,7 +464,7 @@
 <div class="footer">
   <span dir="ltr">
   <span id="phoneLabel" dir="ltr">Telefon</span>: +90 555 123 45 67
-</span>  
+</span>   
   <span id="addressLabel">Adres: Araklı, Trabzon</span>
   <a id="mapLink" href="https://maps.app.goo.gl/KQw3n1ojKLSa2UGo7?g_st=iw" target="_blank">Yol Tarifi</a>
 </div>
@@ -517,16 +505,24 @@
       item21: "Patates Kızartması",
       item22: "Combo Tabağı",
       item23: "Kumpir",
-      item24: "Köfte",
-      item25: "Döner",
-      item26: "Kebap",
-      item27: "Pilav",
-      item28: "Çorba",
-      item29: "Köfte",
-      item30: "Döner",
-      item31: "Kebap",
-      item32: "Pilav",
-      item33: "Çorba",
+      item24name: "Klasik Sandviç",
+      item24desc: "(Domates, Beyaz peynir, Kaşar, Marul, Salam)",
+      item25name: "Krem Peynirli Sandviç",
+      item25desc: "(Domates, Krem peynir, Kaşar, Zeytin, Marul, Salam)",
+      item26name: "Ton Balıklı Sandviç",
+      item26desc: "(Ton balığı, Beyaz peynir, Zeytin, Mısır, Marul, Salatalık turşusu)",
+      item27name: "Hellim Peynirli Sandviç",
+      item27desc: "(Kızarmış hellim, Domates, Zeytin, Marul, Salam)",
+      item28name: "Çorba",
+      item28desc: "Bu bir test ürünüdür, fiyat geçici.",
+      item29name: "Klasik Burger",
+      item29desc: "(120gr köfte, Domates, Marul, Turşu) [Çedar +20₺]",
+      item30name: "Tavuk Burger",
+      item30desc: "(Şinitzel, Marul, Domates, Turşu) [Çedar +20₺]",
+      item32name: "Limon Burger",
+      item32desc: "(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]",
+      item33name: "Çorba",
+      item33desc: "Bu bir test ürünüdür, fiyat geçici.",
       item34: "Waffle",
       item35: "Dondurmalı Waffle",
       item36: "Tabak Waffle",
@@ -570,16 +566,24 @@
       item21: "French Fries",
       item22: "Combo Plate",
       item23: "Kumpir",
-      item24: "Meatballs",
-      item25: "Doner Kebab",
-      item26: "Kebab",
-      item27: "Rice",
-      item28: "Soup",
-      item29: "Meatballs",
-      item30: "Doner Kebab",
-      item31: "Kebab",
-      item32: "Rice",
-      item33: "Soup",
+      item24name: "Classic Sandwich",
+      item24desc: "(Tomato, White cheese, Kashar, Lettuce, Salami)",
+      item25name: "Cream Cheese Sandwich",
+      item25desc: "(Tomato, Cream cheese, Kashar, Olives, Lettuce, Salami)",
+      item26name: "Tuna Sandwich",
+      item26desc: "(Tuna, White cheese, Olives, Corn, Lettuce, Pickled cucumber)",
+      item27name: "Halloumi Cheese Sandwich",
+      item27desc: "(Fried halloumi, Tomato, Olives, Lettuce, Salami)",
+      item28name: "Soup",
+      item28desc: "This is a test product, price is temporary.",
+      item29name: "Classic Burger",
+      item29desc: "(120gr meatballs, Tomato, Lettuce, Pickle) [Cheddar +20₺]",
+      item30name: "Chicken Burger",
+      item30desc: "(Schnitzel, Lettuce, Tomato, Pickle) [Cheddar +20₺]",
+      item32name: "Lemon Burger",
+      item32desc: "(150gr meatballs, Tomato, Lettuce, Pickle, Special sauce) [Cheddar +20₺]",
+      item33name: "Soup",
+      item33desc: "This is a test product, price is temporary.",
       item34: "Waffle",
       item35: "Ice Cream Waffle",
       item36: "Plate Waffle",
@@ -623,16 +627,24 @@
       item21: "بطاطس مقلية",
       item22: "طبق كومبو",
       item23: "كومبير",
-      item24: "كفتة",
-      item25: "شاورما",
-      item26: "كباب",
-      item27: "أرز",
-      item28: "شوربة",
-      item29: "كفتة",
-      item30: "شاورما",
-      item31: "كباب",
-      item32: "أرز",
-      item33: "شوربة",
+      item24name: "ساندويتش كلاسيك",
+      item24desc: "(طماطم، جبنة بيضاء، كشر، خس، سلامي)",
+      item25name: "ساندويتش بالجبنة الكريمية",
+      item25desc: "(طماطم، جبنة كريمية، كشر، زيتون، خس، سلامي)",
+      item26name: "ساندويتش بالتونة",
+      item26desc: "(تونة، جبنة بيضاء، زيتون، ذرة، خس، خيار مخلل)",
+      item27name: "ساندويتش جبنة هالومي",
+      item27desc: "(هالومي مقلي، طماطم، زيتون، خس، سلامي)",
+      item28name: "شوربة",
+      item28desc: "هذا منتج اختبار، السعر مؤقت.",
+      item29name: "برغر كلاسيك",
+      item29desc: "يحتوي على كرات لحم 120 غرامًا، طماطم، خس، مخلل (مع جبنة شيدر إضافية بـ ₺20)",
+      item30name: "برغر دجاج",
+      item30desc: "يحتوي على شنيتزل، خس، طماطم، مخلل (مع جبنة شيدر إضافية بـ ₺20)",
+      item32name: "برغر ليمون",
+      item32desc: "يحتوي على كرات لحم 150 غرامًا، طماطم، خس، مخلل، صلصة خاصة (مع جبنة شيدر إضافية بـ ₺20 )",
+      item33name: "شوربة",
+      item33desc: "هذا منتج اختبار، السعر مؤقت.",
       item34: "وافل",
       item35: "وافل بالآيس كريم",
       item36: "وافل طبق",
@@ -659,7 +671,16 @@
       } else {
         const element = document.getElementById(key);
         if (element) {
-          element.textContent = t[key];
+          if (key.includes('name')) {
+            const descKey = key.replace('name', 'desc');
+            const descElement = document.getElementById(descKey);
+            if (descElement) {
+              element.textContent = t[key];
+              descElement.textContent = t[descKey];
+            }
+          } else {
+            element.textContent = t[key];
+          }
         }
       }
     }
