--- a/index.html
+++ b/index.html
@@ -353,6 +353,156 @@
 </div>
 
 <div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="milkshakeTitle">🥤 Milkshake</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/cikolatamilk.jpg"><span id="item66">Çikolatalı Milkshake</span></div>
+      <div class="price">140 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/cilekmilk.jpg"><span id="item67">Çilekli Milkshake</span></div>
+      <div class="price">140 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/muzlumilk.jpg"><span id="item68">Muzlu Milkshake</span></div>
+      <div class="price">140 TL</div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="hotDrinksTitle">☕ Sıcak İçecekler</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/espresso.jpg"><span id="item39"><span id="item39name">Espresso</span><br><small id="item39desc">Küçük ama güçlü bir kahve, yoğun ve aromatik.</small></span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/americano.jpg"><span id="item40"><span id="item40name">Americano</span><br><small id="item40desc">Espresso üzerine sıcak su eklenerek yapılır, daha hafif ve içimi kolaydır.</small></span></div>
+      <div class="price">90 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/latte.jpg"><span id="item41"><span id="item41name">Latte</span><br><small id="item41desc">Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ile yapılır.</small></span></div>
+      <div class="price">100 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/caramellatte.jpg"><span id="item42"><span id="item42name">Caramel Latte</span><br><small id="item42desc">Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ve caramel sos ile yapılır.</small></span></div>
+      <div class="price">110 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/cappucino.jpg"><span id="item43"><span id="item43name">Cappucino</span><br><small id="item43desc">Eşit miktarda espresso, sıcak süt ve kalın süt köpüğü ile içerir.</small></span></div>
+      <div class="price">100 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/mocha.jpg"><span id="item44"><span id="item44name">Mocha</span><br><small id="item44desc">Espresso, sıcak çikolata ve süt karışımı, üzerine krema eklenebilir.</small></span></div>
+      <div class="price">110 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/salep.jpg"><span id="item45">Salep</span></div>
+      <div class="price">110 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sicakcikolata.jpg"><span id="item46">Sıcak Çikolata</span></div>
+      <div class="price">110 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/nescafe.jpg"><span id="item47">Nescafe</span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sutlunescafe.jpg"><span id="item48">Sütlü Nescafe</span></div>
+      <div class="price">100 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/filtrekahve.jpg"><span id="item49">Filtre Kahve</span></div>
+      <div class="price">90 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sutlufiltrekahve.jpg"><span id="item50">Sütlü Filtre Kahve</span></div>
+      <div class="price">100 TL</div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="coldCoffeesTitle">🥤 Soğuk Kahveler</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/iceamericano.jpg"><span id="item51">Ice Americano</span></div>
+      <div class="price">100 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/icelatte.jpg"><span id="item52">Ice Latte</span></div>
+      <div class="price">120 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/icecaramellatte.jpg"><span id="item53">Ice Caramel Latte</span></div>
+      <div class="price">130 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/icemocha.jpg"><span id="item54">Ice Mocha</span></div>
+      <div class="price">120 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sogukfiltrekahve.jpg"><span id="item55">Soğuk Filtre Kahve</span></div>
+      <div class="price">110 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/frappe.jpg"><span id="item56">Frappe</span></div>
+      <div class="price">120 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/caramelfrappe.jpg"><span id="item57">Caramel Frappe</span></div>
+      <div class="price">130 TL</div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="turkishCoffeesTitle">🇹🇷 Türk Kahveleri</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/turkkahve.jpg"><span id="item58">Türk Kahvesi</span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/dibekkahve.jpg"><span id="item59">Dibek Kahvesi</span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/menengickahve.jpg"><span id="item60">Menengiç Kahvesi</span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/damlasakizliturkkahve.jpg"><span id="item61">Damla Sakızlı Türk Kahvesi</span></div>
+      <div class="price">80 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/kumdaturkkahve.jpg"><span id="item62">Kumda Türk Kahvesi</span></div>
+      <div class="price">100 TL</div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
+  <div class="accordion-header" onclick="toggleAccordion(this)" id="teasTitle">🍵 Çaylar</div>
+  <div class="accordion-content">
+    <div class="item">
+      <div class="left"><img src="img/bardakcay.jpg"><span id="item63">Bardak Çay</span></div>
+      <div class="price">25 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/fincancay.jpg"><span id="item64">Fincan Çay</span></div>
+      <div class="price">40 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/bitkicay.jpg"><span id="item65"><span id="item65name">Bitki Çayları</span><br><small id="item65desc">Çeşitli seçenekler: papatya, nane, ıhlamur, zencefil, adaçayı, yeşilçay, kış çayı, hibisküs, melisa, kuşburnu.</small></span></div>
+      <div class="price">120 TL</div>
+    </div>
+  </div>
+</div>
+
+<div class="accordion">
   <div class="accordion-header" onclick="toggleAccordion(this)" id="snacksTitle">🥪 Atıştırmalıklar</div>
   <div class="accordion-content">
     <div class="item">
@@ -477,11 +627,16 @@
       welcome: "Limon Cafe'ye Hoş Geldiniz!",
       freshJuicesTitle: "🥤 Sıkma Meyveler",
       coldDrinksTitle: "🧋 Soğuk İçecekler",
+      hotDrinksTitle: "☕ Sıcak İçecekler",
+      coldCoffeesTitle: "🥤 Soğuk Kahveler",
+      turkishCoffeesTitle: "🇹🇷 Türk Kahveleri",
+      teasTitle: "🍵 Çaylar",
       snacksTitle: "🥪 Atıştırmalıklar",
       kumpirTitle: "🥔 Kumpir",
       coldSandwichesTitle: "🌭 Soğuk Sandviçler",
       burgersTitle: "🍔 Burgerler",
       dessertsTitle: "🍰 Tatlılar",
+      milkshakeTitle: "🥤 Milkshake",
       item0: "🌐 Dil Seçimi",
       item1: "Ev Yapımı Limonata",
       item2: "Çilekli Limonata",
@@ -529,6 +684,43 @@
       item36: "Tabak Waffle",
       item37: "Dubai Cheesecake",
       item38: "Şiş Waffle",
+      item39name: "Espresso",
+      item39desc: "Küçük ama güçlü bir kahve, yoğun ve aromatik.",
+      item40name: "Americano",
+      item40desc: "Espresso üzerine sıcak su eklenerek yapılır, daha hafif ve içimi kolaydır.",
+      item41name: "Latte",
+      item41desc: "Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ile yapılır.",
+      item42name: "Caramel Latte",
+      item42desc: "Espresso, bol miktarda sıcak süt ve hafif süt köpüğü ve caramel sos ile yapılır.",
+      item43name: "Cappuccino",
+      item43desc: "Eşit miktarda espresso, sıcak süt ve kalın süt köpüğü ile içerir.",
+      item44name: "Mocha",
+      item44desc: "Espresso, sıcak çikolata ve süt karışımı, üzerine krema eklenebilir.",
+      item45: "Salep",
+      item46: "Sıcak Çikolata",
+      item47: "Nescafe",
+      item48: "Sütlü Nescafe",
+      item49: "Filtre Kahve",
+      item50: "Sütlü Filtre Kahve",
+      item51: "Ice Americano",
+      item52: "Ice Latte",
+      item53: "Ice Caramel Latte",
+      item54: "Ice Mocha",
+      item55: "Soğuk Filtre Kahve",
+      item56: "Frappe",
+      item57: "Caramel Frappe",
+      item58: "Türk Kahvesi",
+      item59: "Dibek Kahvesi",
+      item60: "Menengiç Kahvesi",
+      item61: "Damla Sakızlı Türk Kahvesi",
+      item62: "Kumda Türk Kahvesi",
+      item63: "Bardak Çay",
+      item64: "Fincan Çay",
+      item65name: "Bitki Çayları",
+      item65desc: "Çeşitli seçenekler: papatya, nane, ıhlamur, zencefil, adaçayı, yeşilçay, kış çayı, hibisküs, melisa, kuşburnu.",
+      item66: "Çikolatalı Milkshake",
+      item67: "Çilekli Milkshake",
+      item68: "Muzlu Milkshake",
       phoneLabel: "Telefon",
       mapLink: "Yol Tarifi",
       addressLabel: "Adres: Araklı, Trabzon"
@@ -538,11 +730,16 @@
       welcome: "Welcome to Limon Cafe!",
       freshJuicesTitle: "🥤 Fresh Juices",
       coldDrinksTitle: "🧋 Cold Drinks",
+      hotDrinksTitle: "☕ Hot Drinks",
+      coldCoffeesTitle: "🥤 Cold Coffees",
+      turkishCoffeesTitle: "🇹🇷 Turkish Coffees",
+      teasTitle: "🍵 Teas",
       snacksTitle: "🥪 Snacks",
       kumpirTitle: "🥔 Kumpir",
       coldSandwichesTitle: "🌭 Cold Sandwiches",
       burgersTitle: "🍔 Burgers",
       dessertsTitle: "🍰 Desserts",
+      milkshakeTitle: "🥤 Milkshake",
       item0: "🌐 Language",
       item1: "Homemade Lemonade",
       item2: "Strawberry Lemonade",
@@ -590,6 +787,43 @@
       item36: "Plate Waffle",
       item37: "Dubai Cheesecake",
       item38: "Skewer Waffle",
+      item39name: "Espresso",
+      item39desc: "A small but strong coffee, intense and aromatic.",
+      item40name: "Americano",
+      item40desc: "Made by adding hot water to espresso, lighter and easier to drink.",
+      item41name: "Latte",
+      item41desc: "Made with espresso, a generous amount of hot milk, and a light milk foam.",
+      item42name: "Caramel Latte",
+      item42desc: "Made with espresso, a generous amount of hot milk, a light milk foam, and caramel sauce.",
+      item43name: "Cappuccino",
+      item43desc: "Contains equal parts espresso, hot milk, and thick milk foam.",
+      item44name: "Mocha",
+      item44desc: "A mix of espresso, hot chocolate, and milk, with optional whipped cream on top.",
+      item45: "Salep",
+      item46: "Hot Chocolate",
+      item47: "Nescafe",
+      item48: "Milky Nescafe",
+      item49: "Filter Coffee",
+      item50: "Milky Filter Coffee",
+      item51: "Ice Americano",
+      item52: "Ice Latte",
+      item53: "Ice Caramel Latte",
+      item54: "Ice Mocha",
+      item55: "Cold Filter Coffee",
+      item56: "Frappe",
+      item57: "Caramel Frappe",
+      item58: "Turkish Coffee",
+      item59: "Dibek Coffee",
+      item60: "Menengiç Coffee",
+      item61: "Mastic Turkish Coffee",
+      item62: "Turkish Coffee in Sand",
+      item63: "Cup Tea",
+      item64: "Teacup Tea",
+      item65name: "Herbal Teas",
+      item65desc: "Various options: chamomile, mint, linden, ginger, sage, green tea, winter tea, hibiscus, melissa, rosehip.",
+      item66: "Chocolate Milkshake",
+      item67: "Strawberry Milkshake",
+      item68: "Banana Milkshake",
       phoneLabel: "Phone",
       mapLink: "Get Directions",
       addressLabel: "Address: Araklı, Trabzon"
@@ -599,11 +833,16 @@
       welcome: "مرحبًا بكم في كافيه ليمون!",
       freshJuicesTitle: "🥤 العصائر الطازجة",
       coldDrinksTitle: "🧋 المشروبات الباردة",
+      hotDrinksTitle: "☕ المشروبات الساخنة",
+      coldCoffeesTitle: "🥤 القهوة الباردة",
+      turkishCoffeesTitle: "🇹🇷 قهوة تركية",
+      teasTitle: "🍵 الشاي",
       snacksTitle: "🥪 الوجبات الخفيفة",
       kumpirTitle: "🥔 كومبير",
       coldSandwichesTitle: "🌭 الساندويتشات الباردة",
       burgersTitle: "🍔 برغر",
       dessertsTitle: "🍰 الحلويات",
+      milkshakeTitle: "🥤 ميلكشيك",
       item0: "🌐 اختيار اللغة",
       item1: "ليموناضة منزلية",
       item2: "ليموناضة فراولة",
@@ -651,6 +890,43 @@
       item36: "وافل طبق",
       item37: "تشيز كيك دبي",
       item38: "وافل شواء",
+      item39name: "إسبريسو",
+      item39desc: "قهوة صغيرة ولكن قوية، مكثفة وذات أريج.",
+      item40name: "أمريكانو",
+      item40desc: "يُصنع بإضافة ماء ساخن إلى الإسبريسو، أخف وأسهل في الشرب.",
+      item41name: "لاتيه",
+      item41desc: "يُصنع من إسبريسو، كمية وفيرة من الحليب الساخن، ورغوة حليب خفيفة.",
+      item42name: "لاتيه كراميل",
+      item42desc: "يُصنع من إسبريسو، كمية وفيرة من الحليب الساخن، ورغوة حليب خفيفة، وصلصة الكراميل.",
+      item43name: "كابوتشينو",
+      item43desc: "يحتوي على أجزاء متساوية من الإسبريسو، الحليب الساخن، ورغوة الحليب السميكة.",
+      item44name: "موكا",
+      item44desc: "مزيج من الإسبريسو، الشوكولاتة الساخنة، والحليب، مع إمكانية إضافة الكريمة.",
+      item45: "سالب",
+      item46: "شوكولاتة ساخنة",
+      item47: "نيسكافيه",
+      item48: "نيسكافيه بالحليب",
+      item49: "قهوة فلتر",
+      item50: "قهوة فلتر بالحليب",
+      item51: "آيس أمريكانو",
+      item52: "آيس لاتيه",
+      item53: "آيس لاتيه كراميل",
+      item54: "آيس موكا",
+      item55: "قهوة فلتر باردة",
+      item56: "فرابيه",
+      item57: "فرابيه كراميل",
+      item58: "قهوة تركية",
+      item59: "قهوة ديبك",
+      item60: "قهوة مننجيتش",
+      item61: "قهوة تركية بالمستكة",
+      item62: "قهوة تركية على الرمل",
+      item63: "شاي كوب",
+      item64: "شاي فنجان",
+      item65name: "شاي الأعشاب",
+      item65desc: "خيارات متنوعة: البابونج، النعناع، الزيزفون، الزنجبيل، المريمية، الشاي الأخضر، شاي الشتاء، الهيبيسكس، الميليسا، الورد البلدي.",
+      item66: "ميلكشيك الشوكولاتة",
+      item67: "ميلكشيك الفراولة",
+      item68: "ميلكشيك الموز",
       phoneLabel: "هاتف",
       mapLink: "الاتجاهات",
       addressLabel: "العنوان: أراكلي، طرابزون"
