--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
       <div class="price">210 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/pilav.jpg"><span id="item32"><span id="item32name">Limon Burger</span><br><small id="item32desc">(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]</small></span></div>
+      <div class="left"><img src="img/limonburger.jpg"><span id="item32"><span id="item32name">Limon Burger</span><br><small id="item32desc">(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]</small></span></div>
       <div class="price">260 TL</div>
     </div>
   </div>
