--- a/index.html
+++ b/index.html
@@ -356,15 +356,15 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="milkshakeTitle">🥤 Milkshake</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/cikolatamilk.jpg"><span id="item66">Çikolatalı Milkshake</span></div>
+      <div class="left"><img src="img/cikolatamilkshake.jpg"><span id="item66">Çikolatalı Milkshake</span></div>
       <div class="price">140 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/cilekmilk.jpg"><span id="item67">Çilekli Milkshake</span></div>
+      <div class="left"><img src="img/cileklimilkshake.jpg"><span id="item67">Çilekli Milkshake</span></div>
       <div class="price">140 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/muzlumilk.jpg"><span id="item68">Muzlu Milkshake</span></div>
+      <div class="left"><img src="img/muzlumilkshake.jpg"><span id="item68">Muzlu Milkshake</span></div>
       <div class="price">140 TL</div>
     </div>
   </div>
@@ -390,7 +390,7 @@
       <div class="price">110 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/cappucino.jpg"><span id="item43"><span id="item43name">Cappucino</span><br><small id="item43desc">Eşit miktarda espresso, sıcak süt ve kalın süt köpüğü ile içerir.</small></span></div>
+      <div class="left"><img src="img/cappuccino.jpg"><span id="item43"><span id="item43name">Cappuccino</span><br><small id="item43desc">Eşit miktarda espresso, sıcak süt ve kalın süt köpüğü ile içerir.</small></span></div>
       <div class="price">100 TL</div>
     </div>
     <div class="item">
@@ -550,7 +550,7 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="coldSandwichesTitle">🌭 Soğuk Sandviçler</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/klasiksandvich.jpg"><span id="item24"><span id="item24name">Klasik Sandviç</span><br><small id="item24desc">(Domates, Beyaz peynir, Kaşar, Marul, Salam)</small></span></div>
+      <div class="left"><img src="img/klasiksandvic.jpg"><span id="item24"><span id="item24name">Klasik Sandviç</span><br><small id="item24desc">(Domates, Beyaz peynir, Kaşar, Marul, Salam)</small></span></div>
       <div class="price">100 TL</div>
     </div>
     <div class="item">
@@ -580,7 +580,7 @@
       <div class="price">210 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/limonburger.jpg"><span id="item32"><span id="item32name">Limon Burger</span><br><small id="item32desc">(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]</small></span></div>
+      <div class="left"><img src="img/pilav.jpg"><span id="item32"><span id="item32name">Limon Burger</span><br><small id="item32desc">(150gr köfte, Domates, Marul, Turşu, Özel sos) [Çedar +20₺]</small></span></div>
       <div class="price">260 TL</div>
     </div>
   </div>
@@ -590,24 +590,64 @@
   <div class="accordion-header" onclick="toggleAccordion(this)" id="dessertsTitle">🍰 Tatlılar</div>
   <div class="accordion-content">
     <div class="item">
-      <div class="left"><img src="img/waffle.jpg"><span id="item34">Waffle</span></div>
+      <div class="left"><img src="img/waffle1.jpg"><span id="item34">Waffle</span></div>
       <div class="price">210 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/tabakwaffle.jpg"><span id="item35">Dondurmalı Waffle</span></div>
-      <div class="price">120 TL</div>
+      <div class="left"><img src="img/waffle.jpg"><span id="item35">Dondurmalı Waffle</span></div>
+      <div class="price">240 TL</div>
     </div>
     <div class="item">
-      <div class="left"><img src="img/waffle.jpg"><span id="item36">Tabak Waffle</span></div>
-      <div class="price">140 TL</div>
-    </div>
-    <div class="item">
-      <div class="left"><img src="img/dubai.jpg"><span id="item37">Dubai Cheesecake</span></div>
-      <div class="price">210 TL</div>
+      <div class="left"><img src="img/tabakwaffle.jpg"><span id="item36">Tabak Waffle</span></div>
+      <div class="price">240 TL</div>
     </div>
     <div class="item">
       <div class="left"><img src="img/siswaffle.jpg"><span id="item38">Şiş Waffle</span></div>
       <div class="price">240 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/cheesecake.jpg"><span id="item69">Cheesecake</span></div>
+      <div class="price">210 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/dubaicheesecake.jpg"><span id="item70">Dubai Cheesecake</span></div>
+      <div class="price">210 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sansebastian.jpg"><span id="item71">San Sebastian</span></div>
+      <div class="price">220 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/ormanmeyvelipasta.jpg"><span id="item72">Orman Meyveli Pasta</span></div>
+      <div class="price">210 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/marlenka.jpg"><span id="item73">Marlenka</span></div>
+      <div class="price">210 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/tiramisu.jpg"><span id="item74">Tiramisu</span></div>
+      <div class="price">200 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sufle.jpg"><span id="item75">Sufle</span></div>
+      <div class="price">210 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/dondurmalisufle.jpg"><span id="item76">Dondurmalı Sufle</span></div>
+      <div class="price">240 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/magnolia.jpg"><span id="item77">Magnolia</span></div>
+      <div class="price">180 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/spoonful.jpg"><span id="item78">Spoonful</span></div>
+      <div class="price">180 TL</div>
+    </div>
+    <div class="item">
+      <div class="left"><img src="img/sutlac.jpg"><span id="item79">Sütlaç</span></div>
+      <div class="price">80 TL</div>
     </div>
   </div>
 </div>
@@ -721,6 +761,17 @@
       item66: "Çikolatalı Milkshake",
       item67: "Çilekli Milkshake",
       item68: "Muzlu Milkshake",
+      item69: "Cheesecake",
+      item70: "Dubai Cheesecake",
+      item71: "San Sebastian",
+      item72: "Orman Meyveli Pasta",
+      item73: "Marlenka",
+      item74: "Tiramisu",
+      item75: "Sufle",
+      item76: "Dondurmalı Sufle",
+      item77: "Magnolia",
+      item78: "Spoonful",
+      item79: "Sütlaç",
       phoneLabel: "Telefon",
       mapLink: "Yol Tarifi",
       addressLabel: "Adres: Araklı, Trabzon"
@@ -824,6 +875,17 @@
       item66: "Chocolate Milkshake",
       item67: "Strawberry Milkshake",
       item68: "Banana Milkshake",
+      item69: "Cheesecake",
+      item70: "Dubai Cheesecake",
+      item71: "San Sebastian",
+      item72: "Forest Fruit Cake",
+      item73: "Marlenka",
+      item74: "Tiramisu",
+      item75: "Sufle",
+      item76: "Ice Cream Sufle",
+      item77: "Magnolia",
+      item78: "Spoonful",
+      item79: "Rice Pudding",
       phoneLabel: "Phone",
       mapLink: "Get Directions",
       addressLabel: "Address: Araklı, Trabzon"
@@ -927,6 +989,17 @@
       item66: "ميلكشيك الشوكولاتة",
       item67: "ميلكشيك الفراولة",
       item68: "ميلكشيك الموز",
+      item69: "تشيز كيك",
+      item70: "تشيز كيك دبي",
+      item71: "سان سيباستيان",
+      item72: "كعكة فواكه الغابة",
+      item73: "مارلينكا",
+      item74: "تيراميسو",
+      item75: "سوفله",
+      item76: "سوفله بالآيس كريم",
+      item77: "ماغنوليا",
+      item78: "سفونفول",
+      item79: "رز بالحليب",
       phoneLabel: "هاتف",
       mapLink: "الاتجاهات",
       addressLabel: "العنوان: أراكلي، طرابزون"
